# Network-Analysis-Lattes

./: .gitignore  README.md  pyproject.toml  requirements.txt  termos.txt
graphs/: coauthorship_graph.xml
graphs/aplicacoes/: capitulos_graph.gexf  coauthorship_graph.gexf  eventos_graph.gexf  livros_graph.gexf  periodicos_graph.gexf
link-prediction/: attri2vec-link-prediction.ipynb  complex-link-prediction.ipynb  ctdne-link-prediction.ipynb  distmult-link-prediction.ipynb  gcn-link-prediction.ipynb  graphsage-link-prediction.ipynb  hinsage-link-prediction.ipynb  homogeneous-comparison-link-prediction.ipynb  metapath2vec-link-prediction.ipynb  node2vec-link-prediction.ipynb
link-prediction/py/: 2.link-prediction.py  attri2vec-link-prediction.py  comparison.py  complex-link-prediction.py  ctdne-link-prediction.py  distmult-link-prediction.py  gcn-link-prediction.py  graphsage-link-prediction.py  hinsage-link-prediction.py  metapath2vec-link-prediction.py  node2vec-link-prediction.py
notebooks/: 0.add_header.ipynb  1.create_graph.ipynb  1.create_graph_refactored.ipynb  2.analysis.ipynb  2.link-prediction.ipynb  3.orientacoes.ipynb  add_header.ipynb  grafo-orientacoes.csv  meu_grafo.gpickle  my-comparison.ipynb  original-comparison.ipynb
src/: add_header.py  build_orientacoes_graph.py  build_publication_graphs.py  generic_dataset_analysis.py  plot_coauthorship.py
src/data/: add_header.ipynb  build_orientacoes_graph.py  build_orientacoes_graph_class.py  build_orientacoes_graph_utils.py  build_publication_graphs.py  build_publication_graphs_class.py  (+1 more)
(+17 files in other folders)
